--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,8 @@ footer .container {
   font-size: 14px;
   line-height: 1.14;
   color: #212121;
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:focus {
   text-decoration: none;
@@ -83,6 +85,8 @@ footer .container {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-nav .contact-link:not(:first-child) {
   margin-left: 50px;
@@ -237,6 +241,8 @@ section.bottom {
   line-height: 1.62;
   text-align: center;
   cursor: pointer;
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-button:hover {
   padding: 6px 22px;
@@ -275,6 +281,8 @@ section.bottom {
 }
 .project-card {
   border-bottom: 1px solid #eeeeee;
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project-card:hover {
   border-bottom: 1px solid #eeeeee;
@@ -301,6 +309,8 @@ section.bottom {
 .contact-link .icon-contact {
   fill: #757575;
   margin-right: 10px;
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-link:hover .icon-contact {
   fill: #2196f3;
@@ -361,6 +371,8 @@ section.bottom {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .ourclient-card:hover {
   width: 170px;
@@ -387,6 +399,8 @@ section.bottom {
   stroke-width: 0;
   stroke: currentColor;
   fill: #afb1b8;
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socialmedia-list {
   padding: 0px 32px 30px 32px;
@@ -403,6 +417,8 @@ section.bottom {
   stroke: currentColor;
   fill: #afb1b8;
   border-radius: 50%;
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover {
   display: inline-block;
