--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   font-family: "Roboto", sans-serif;
   color: #212121;
   width: 1600px;
+  position: relative;
 }
 .container {
   width: 1200px;
@@ -556,4 +557,37 @@ section.bottom {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: 350ms;
+  scale: 0.01;
+  opacity: 0;
+}
+.backdrop {
+  transform: scale(1);
+  transition: 350ms;
+  opacity: 0.5;
+  position: fixed;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  width: 528px;
+  height: 581px;
+  top: 130px;
+  left: 536px;
 }
