--- a/css/style.css
+++ b/css/style.css
@@ -558,38 +558,44 @@ section.bottom {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.close-btn {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background-color: yellow;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  cursor: pointer;
-}
+
 .is-hidden {
-  opacity: 1;
+  opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: 350ms;
-  scale: 0.01;
-  opacity: 0;
+  transition: 50ms;
 }
 .backdrop {
-  transform: scale(1);
-  transition: 350ms;
-  opacity: 0.9;
   position: fixed;
-  background: #ffffff;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   width: 528px;
   height: 581px;
-  top: 100px;
-  left: 536px;
+  background-color: #fff;
+  position: relative;
+}
+.close-btn {
+  position: absolute;
+  left: 490px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
 }
 .x-btn {
   display: inline-block;
@@ -597,5 +603,5 @@ section.bottom {
   height: 18px;
   stroke-width: 0;
   stroke: currentColor;
-  fill: #fff;
+  fill: #000;
 }
