--- a/css/style.css
+++ b/css/style.css
@@ -566,25 +566,24 @@ section.bottom {
   transition: 50ms;
 }
 .backdrop {
-  position: fixed;
+  position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
   top: 0px;
   left: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .modal {
+  position: fixed;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   width: 528px;
   height: 581px;
   background-color: #fff;
-  position: relative;
+  top: 50px;
+  left: 536px;
 }
 .close-btn {
   position: absolute;
