--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,14 @@ section.bottom {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: 750ms;
+}
+@keyframes changeScale {
+  0% {
+    transform: rotate(0.5turn);
+  }
+  100% {
+    transform: rotate(1turn);
+  }
 }
 .backdrop {
   position: absolute;
@@ -574,10 +581,13 @@ section.bottom {
   height: 100%;
   top: 0px;
   left: 0px;
-  transition: 750ms;
+  transition: 700ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   background-attachment: fixed;
 }
 .modal {
+  animation-name: changeScale;
+  animation-duration: 750ms;
   position: fixed;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
