--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
+:root {
+  --light-blue: #2196f3;
+  --black: #212121;
+  --grey: #757575;
+}
 body {
   font-family: "Roboto", sans-serif;
-  color: #212121;
+  color: var(--black);
   width: 1600px;
   position: relative;
 }
@@ -29,7 +34,7 @@ footer .container {
   margin: 0px;
   text-decoration: none;
   font-family: "Raleway";
-  color: #2196f3;
+  color: var(--light-blue);
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -56,13 +61,13 @@ footer .container {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  color: #212121;
+  color: var(--black);
   transition: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:focus {
   text-decoration: none;
-  color: #2196f3;
+  color: var(--light-blue);
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -71,7 +76,7 @@ footer .container {
 
 .nav-link:hover {
   text-decoration: none;
-  color: #2196f3;
+  color: var(--light-blue);
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -101,14 +106,14 @@ footer .container {
 }
 .contact-link:hover {
   text-decoration: none;
-  color: #2196f3;
+  color: var(--light-blue);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
 }
 .contact-link:focus {
   text-decoration: none;
-  color: #2196f3;
+  color: var(--light-blue);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -142,19 +147,18 @@ h1 {
   color: #fff;
 }
 .order-button {
-  padding: 0px;
+  padding: 10px 41px 10px 42px;
   margin-top: 30px;
   margin-bottom: 210px;
-  background-color: #2196f3;
+  background-color: var(--light-blue);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   color: #fff;
-  width: 200px;
-  height: 50px;
   cursor: pointer;
+  border: 0px;
 }
 section {
   padding: 94px 0px;
@@ -177,7 +181,7 @@ section {
   text-transform: uppercase;
 }
 .lorem-describe {
-  color: #757575;
+  color: var(--grey);
   font-size: 14px;
   line-height: 1.71;
   margin: 0px;
@@ -218,7 +222,7 @@ section.bottom {
   padding-bottom: 10px;
 }
 .job-title {
-  color: #757575;
+  color: var(--grey);
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
@@ -255,7 +259,7 @@ section.bottom {
   border: 0px;
   cursor: pointer;
   color: #fff;
-  background-color: #2196f3;
+  background-color: var(--light-blue);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   margin-left: 8px;
@@ -269,7 +273,7 @@ section.bottom {
   border: 0px;
   cursor: pointer;
   color: #fff;
-  background-color: #2196f3;
+  background-color: var(--light-blue);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   margin-left: 8px;
@@ -287,22 +291,22 @@ section.bottom {
   line-height: 2;
 }
 .project-type {
-  color: #757575;
+  color: var(--grey);
   font-size: 16px;
   line-height: 1.87;
 }
 .contact-link .icon-contact {
-  fill: #757575;
+  fill: var(--grey);
   margin-right: 10px;
   transition: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-link:hover .icon-contact {
-  fill: #2196f3;
+  fill: var(--light-blue);
   margin-right: 10px;
 }
 .contact-link:focus .icon-contact {
-  fill: #2196f3;
+  fill: var(--light-blue);
   margin-right: 10px;
 }
 
@@ -362,20 +366,20 @@ section.bottom {
 .ourclient-card:hover {
   width: 170px;
   height: 92px;
-  border: 1px solid #2196f3;
+  border: 1px solid var(--light-blue);
   border-radius: 4px;
 }
 .ourclient-card:focus {
   width: 170px;
   height: 92px;
-  border: 1px solid #2196f3;
+  border: 1px solid var(--light-blue);
   border-radius: 4px;
 }
 .ourclient-card:hover .company-logo {
-  fill: #2196f3;
+  fill: var(--light-blue);
 }
 .ourclient-card:focus .company-logo {
-  fill: #2196f3;
+  fill: var(--light-blue);
 }
 .company-logo {
   display: inline-block;
@@ -413,7 +417,7 @@ section.bottom {
   stroke: currentColor;
   fill: #fff;
   border-radius: 50%;
-  background-color: #2196f3;
+  background-color: var(--light-blue);
 }
 .social-link:focus {
   display: inline-block;
@@ -423,7 +427,7 @@ section.bottom {
   stroke: currentColor;
   fill: #fff;
   border-radius: 50%;
-  background-color: #2196f3;
+  background-color: var(--light-blue);
 }
 .join-us {
   font-family: "Roboto";
@@ -459,7 +463,7 @@ section.bottom {
   stroke: currentColor;
   fill: #fff;
   border-radius: 50%;
-  background-color: #2196f3;
+  background-color: var(--light-blue);
 }
 .footersocial-box .socialmedia-list .socialmedia-item .social-link:focus {
   display: inline-block;
@@ -469,27 +473,24 @@ section.bottom {
   stroke: currentColor;
   fill: #fff;
   border-radius: 50%;
-  background-color: #2196f3;
+  background-color: var(--light-blue);
 }
 .mainsite::after {
   display: flex;
   content: "";
-  color: #2196f3;
   position: absolute;
   width: 53px;
   height: 4px;
-  background: #2196f3;
+  background: var(--light-blue);
   border-radius: 2px;
   top: 95.5px;
 }
 .portfoliosite::after {
   display: flex;
   content: "";
-  color: #2196f3;
-  position: absolute;
   width: 53px;
   height: 4px;
-  background: #2196f3;
+  background: var(--light-blue);
   border-radius: 2px;
   top: 95.5px;
 }
